kubernetes/apps/stirling-pdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-ingressroute-tailscale
  namespace: stirling-pdf
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling-pdf.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 8080
  tls:
    secretName: stirling-pdf-certificate-secret-internal
